--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -11,6 +11,8 @@ namePrefix: cluster-api-provider-mailgun-
 # Labels to add to all resources and selectors.
 #commonLabels:
 #  someName: someValue
+commonLabels:
+  cluster.x-k8s.io/provider: infrastructure-mailgun
 
 bases:
 - ../crd
